--- a/20260113-2.md
+++ b/20260113-2.md
@@ -481,3 +481,6 @@ Zeta 函数 $\zeta(s)$ 就是两个“异质”一维空间（一个算术的，
 如果 $s$ 是复数（特别是 $1/2 + it$ ），我们在测算这两个异质空间之间的相位差。
 
 黎曼猜想本质上就是说：这两个空间的“相位对齐”是最优的，所有的误差波都在同一条基线（1/2）上震荡，没有哪个波会失控（实部大于 1/2）导致系统崩溃。
+
+
+整个攻击路线我设想是这样的，1、目前拓扑研究的本质上是空间nearness近性、空间globalness全局性之间的关系，实际上我设想的是加上一个“界性”，就是非同伦嵌入的自指稳定性。2、然后这个界性的计算框架实际上是来自两个空间各自的某种守恒，也就是界性计算实际上等同于拉格朗日量的计算。3、引入一个嵌入的双向结构，传统上认为嵌入只能是低维嵌入高维，而实际上高维也可以嵌入低维，只不过在这里需要抛弃度规R，就是这种嵌入的空间都需要是negCH的，而嵌入造成的边界，是CH存在的唯一的空间，然后就引出界空间的定义，界空间就是包含CH的空间。4、幂基空间和欧式空间的嵌入，从之前三步进行推演，看看是不是可以得到zeta函数的某种形式。这样的话其实RH就是CH的某种特例了。
