--- a/0127.md
+++ b/0127.md
@@ -347,7 +347,7 @@ $$ Q_A(T v) = Q_B(v) $$
 
 
 
-##证明标题：基于商环度规调和的内接正方形存在性证明
+##证明标题：基于商环度规调和的内接正方形存在性证明##
 
 命题：对于欧氏平面 $\mathbb{R}^2$ 上任意简单封闭曲线 $\Gamma$ ，存在四个点 $p_1, p_2, p_3, p_4 \in \Gamma$ ，使得它们构成一个正方形。
 
