--- a/0128.2.md
+++ b/0128.2.md
@@ -1,4 +1,4 @@
-证明标题：基于超越扩张障碍的内接正方形存在性证明
+***证明标题：基于超越扩张障碍的内接正方形存在性证明***
 
 (Existence of Inscribed Squares via Obstruction of Transcendental Extension)
 
