--- a/0128.2.md
+++ b/0128.2.md
@@ -159,3 +159,6 @@ $$ \frac{d\mathbf{p}}{dt} = \mathcal{L}(\mathbf{p}) + \omega \cdot \mathcal{R}(\
 
 综上所述，内接正方形的存在性并非偶然的几何巧合，而是**代数商环结构、动力系统守恒律与集合论基数约束**共同作用的必然结果。
 在 $\neg \text{CH}$ 宇宙中，任何试图“逃离”正方形的几何尝试，最终都会因耗尽商环的信息容量而失败。正方形是商环上的**必然奇点**。
+
+$$ d(p, q) = \sup \{ |f(p) - f(q)| : f \in \mathcal{A}, \| [D, f] \| \le 1 \} $$
+
